--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "esbenp.prettier-vscode",
-    "hashicorp.terraform"
+    "hashicorp.terraform",
+    "ms-python.black-formatter"
   ]
 }
