--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,14 @@
     "editor.codeActionsOnSave": {
       "source.formatAll.terraform": true
     }
-  }
+  },
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "file"
+  },
+  "black-formatter.args": [
+    "--line-length=120",
+    "--target-version=py311"
+  ]
 }
