allow ssh access from Azure Portal

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,12 @@
 FROM python:3.11
 
+# Allow ssh access from Azure Portal
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends dialog \
+    && apt-get install -y --no-install-recommends openssh-server \
+    && echo "root:Docker!" | chpasswd
+COPY sshd_config /etc/ssh/
+
 ENV POETRY_HOME=/etc/poetry
 RUN curl -sSL https://install.python-poetry.org | python -
 ENV PATH $POETRY_HOME/bin:$PATH
@@ -9,5 +16,7 @@ WORKDIR /app
 COPY . .
 
 RUN poetry install
+
+ENTRYPOINT ["./entrypoint.sh"]
 
 CMD ["python", "main.py"]
