--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -8,5 +8,5 @@ authors = []
 python = "^3.11"
 fastapi = "^0.104.1"
 uvicorn = "^0.24.0.post1"
-asyncpg = "^0.29.0"
 azure-identity = "^1.15.0"
+psycopg2-binary = "^2.9.9"
