--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "esbenp.prettier-vscode",
     "hashicorp.terraform",
-    "ms-python.black-formatter"
+    "ms-python.black-formatter",
+    "ms-python.isort"
   ]
 }
