--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,10 +14,9 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
-    "editor.formatOnSaveMode": "file"
-  },
-  "black-formatter.args": [
-    "--line-length=120",
-    "--target-version=py311"
-  ]
+    "editor.formatOnSaveMode": "file",
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    }
+  }
 }
