--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -1,3 +1,10 @@
+[tool.black]
+target-version = ["py312"]
+line-length = 120
+
+[tool.isort]
+profile = "black"
+
 [tool.poetry]
 name = "app"
 version = "0.1.0"
@@ -9,4 +16,5 @@ python = "^3.11"
 fastapi = "^0.104.1"
 uvicorn = "^0.24.0.post1"
 azure-identity = "^1.15.0"
-psycopg2-binary = "^2.9.9"
+asyncpg = "^0.29.0"
+sqlmodel = "^0.0.14"
