--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -18,6 +18,8 @@ uvicorn = "^0.24.0.post1"
 azure-identity = "^1.15.0"
 asyncpg = "^0.29.0"
 sqlmodel = "^0.0.14"
+
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 pytest-asyncio = "^0.23.2"
 
